--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
 		"dev": "deno run --watch main.ts"
 	},
 	"imports": {
+		"@atcute/atproto": "npm:@atcute/atproto@^3.1.0",
 		"@atcute/bluesky": "npm:@atcute/bluesky@^3.1.4",
 		"@atcute/car": "npm:@atcute/car@^3.1.1",
 		"@atcute/client": "npm:@atcute/client@^4.0.3",
@@ -15,6 +16,8 @@
 		"@huggingface/transformers": "npm:@huggingface/transformers@^3.6.1",
 		"@libsql/client": "npm:@libsql/client@^0.15.9",
 		"@stricli/core": "npm:@stricli/core@^1.2.0",
+		"@types/cli-progress": "npm:@types/cli-progress@^3.11.6",
+		"cli-progress": "npm:cli-progress@^3.12.0",
 		"kysely": "npm:kysely@^0.28.2",
 		"kysely-libsql": "npm:kysely-libsql@^0.7.1",
 		"p-queue": "npm:p-queue@^8.1.0",
