--- a/deno.json
+++ b/deno.json
@@ -6,13 +6,14 @@
 	"tasks": {
 		"dev": "deno run --watch main.ts"
 	},
+	"nodeModulesDir": "auto",
 	"imports": {
 		"@atcute/atproto": "npm:@atcute/atproto@^3.1.0",
 		"@atcute/bluesky": "npm:@atcute/bluesky@^3.1.4",
 		"@atcute/car": "npm:@atcute/car@^3.1.1",
 		"@atcute/client": "npm:@atcute/client@^4.0.3",
-		"@atcute/identity-resolver": "npm:@atcute/identity-resolver@^1.1.3",
 		"@atcute/lexicons": "npm:@atcute/lexicons@^1.1.0",
+		"@atproto/identity": "npm:@atproto/identity@^0.4.8",
 		"@huggingface/transformers": "npm:@huggingface/transformers@^3.6.1",
 		"@libsql/client": "npm:@libsql/client@^0.15.9",
 		"@stricli/core": "npm:@stricli/core@^1.2.0",
