--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@std/cache": "npm:@jsr/std__cache@^0.2.0",
 		"@stricli/core": "^1.2.0",
 		"cli-progress": "^3.12.0",
+		"gradient-string": "^3.0.0",
 		"kysely": "^0.28.2",
 		"kysely-libsql": "^0.7.1",
 		"picocolors": "^1.1.1",
