--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"gradient-string": "^3.0.0",
 		"kysely": "^0.28.2",
 		"kysely-libsql": "^0.7.1",
+		"large-set": "^1.0.3",
 		"picocolors": "^1.1.1",
 		"undici": "^7.11.0",
 		"xxhash-wasm": "^1.1.0"
