--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"kysely-libsql": "^0.7.1",
 		"large-set": "^1.0.3",
 		"picocolors": "^1.1.1",
+		"terminal-link": "^4.0.0",
 		"undici": "^7.11.0",
 		"xxhash-wasm": "^1.1.0"
 	},
